Add ALWAYS_INLINE to draw call validation and MultiDraw entrypoints

This fixes a performance regresion introduced by factoring validation

Bug: chromium:913151
Change-Id: I645f98e77fe3e5dccf6c2ab00e9ddde424dedf9c
Reviewed-on: https://chromium-review.googlesource.com/c/1370467
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Reviewed-by: Jamie Madill <jmadill@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Austin Eng <enga@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615288}